# idf

./: CMakeLists.txt  dd  design_of_experiments  kstar  main.cpp  matrix.csv  param_file.csv  pr.idf  pr_mat.csv  pr_param.csv  prac.idf  simulate.cpp
IDF/: idf_parser.cpp  idf_parser.hpp
generation/: generation.cpp  generation.hpp
outputs/: mapped_pr_output_matrix.csv  pr_0.idf  pr_1.idf  pr_output_matrix.csv
simulation/: simulate.hpp
util/: utils.cpp  utils.hpp
